# Master-Finder

./: .env  README.md  nx.json  package-lock.json  package.json
.nx/workspace-data/: file-map.json  lockfile.hash  parsed-lock-file.json  project-graph.json
apps/backend-masterfinder/: README.md  project.json  pyproject.toml
apps/backend-masterfinder/backend/: __init__.py  hello.py  main.py
apps/backend-masterfinder/backend/database/: create_db.py  models.py  session.py
apps/backend-masterfinder/backend/handlers/: auth.py
apps/backend-masterfinder/backend/handlers/queries/: client.py  posting.py  rating.py  user.py  worker.py
apps/backend-masterfinder/backend/services/endpoints/: client.py  login.py  posting.py  workers.py
apps/backend-masterfinder/templates/: dashboard.html  index.html
apps/backend-masterfinder/tests/: test_hello.py
apps/frontend-masterfinder/: jest.config.ts  project.json  webpack.config.js
apps/frontend-masterfinder-e2e/: playwright.config.ts  project.json
apps/frontend-masterfinder/src/: index.html  styles.scss
apps/frontend-masterfinder/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  app.routes.ts  app.spec.tsx  app.tsx  nx-welcome.component.ts
apps/frontend-masterfinder/src/app/components/: detalle-posting.component.html  detalle-posting.component.scss  detalle-posting.component.spec.ts  detalle-posting.component.ts  profile-posting.component.html  profile-posting.component.ts
apps/frontend-masterfinder/src/app/components/detalle-posting/: detalle-posting.component.html  detalle-posting.component.ts
apps/frontend-masterfinder/src/app/components/filtros/: filtros.component.html  filtros.component.scss  filtros.component.spec.ts  filtros.component.ts
apps/frontend-masterfinder/src/app/components/home/: home.component.html  home.component.scss  home.component.ts
apps/frontend-masterfinder/src/app/components/login-client/: login-client.component.html  (+3 more)
apps/frontend-masterfinder/src/app/interfaces/: client.ts  worker.ts
apps/frontend-masterfinder/src/assets/: images.jfif
apps/frontend-masterfinder/src/services/: auth.service.ts  filtros.service.ts  login.service.ts  perfil.service.ts  publicacion.service.ts  rating.service.ts  register.service.ts
(+27 files in other folders)
